--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1567,6 +1567,55 @@ select {
 
 .footer-bottom {
   margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.footer-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.footer-social ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer-social span {
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  background-position-x: 75%;
+}
+
+.vk_icon {
+  background: url(../img/icons/social.jpg);
+  background-position-x: 75%;
+}
+
+.fb_icon {
+  background: url(../img/icons/social.jpg);
+  background-position-x: 75%;
+}
+
+.inst_icon {
+  background: url(../img/icons/social.jpg);
+  background-position-x: 75%;
 }
 
 @media screen and (max-width: 1199px) {
