--- a/static/sass/_footer.sass
+++ b/static/sass/_footer.sass
@@ -27,5 +27,28 @@
     margin-bottom: 15px
 .footer-bottom
   margin-top: 70px
+  display: flex
+  align-items: center
+  justify-content: space-between
+.footer-social
+  display: flex
+  align-items: center
+  justify-content: space-between
+  ul
+    display: flex
+  span
+    width: 40px
+    height: 40px
+    display: inline-block
+    background-position-x: 75%
 
+.vk_icon
+  background: url(../img/icons/social.jpg)
+  background-position-x: 75%
+.fb_icon
+  background: url(../img/icons/social.jpg)
+  background-position-x: 75%
 
+.inst_icon
+  background: url(../img/icons/social.jpg)
+  background-position-x: 75%
